--- a/_includes/archive-single-activity.html
+++ b/_includes/archive-single-activity.html
@@ -1,4 +1,5 @@
 <div class="archive__item">
+
   <div style="text-align:center; margin: 2.0em 0 0.75em 0;">
     <div style="font-size: 1.15em; font-weight: 700;">
       🗓️ {{ post.date | date: "%B %Y" }}
@@ -17,7 +18,8 @@
 
   {% if post.header.teaser %}
     <div style="text-align:center; margin: 1.25em 0 2.0em 0;">
-      <img src="{{ base_path }}{{ post.header.teaser }}" style="max-width: 950px; width: 100%; height: auto; border-radius: 8px;" />
+      <img src="{{ base_path }}{{ post.header.teaser }}"
+           style="max-width: 950px; width: 100%; height: auto; border-radius: 8px;" />
     </div>
   {% endif %}
 
