--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -84,41 +84,28 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-  // set width only, for non-square avatars
-  // height: 36px;
+   set width only, for non-square avatars
+   height: 36px;
 
- // @include breakpoint($large) {
- //   display: block;
-//    width: auto;
-//    height: auto;
-//  }
+   @include breakpoint($large) {
+    display: block;
+    width: auto;
+    height: auto;
+  }
 
- // img {
- //   max-width: 175px;
- //   border-radius: 50%;
+ img {
+    max-width: 175px;
+   border-radius: 50%;
 
- //   @include breakpoint($large) {
-  //    padding: 5px;
-  //    border: 1px solid var(--global-border-color);
-  //  }
-
-   img {
-  width: 120px;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 50%;
-  display: block;
-
-  @include breakpoint($large) {
-    width: 175px;
-    height: 175px;
+    @include breakpoint($large) {
     padding: 5px;
-    border: 1px solid var(--global-border-color);
+     border: 1px solid var(--global-border-color);
+   }
+
+   
+
   }
 }
-
-  }
-//}
 
 .author__content {
   display: table-cell;
