--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -84,26 +84,23 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-   set width only, for non-square avatars
-   height: 36px;
+  // set width only, for non-square avatars
+  // height: 36px;
 
-   @include breakpoint($large) {
+  @include breakpoint($large) {
     display: block;
     width: auto;
     height: auto;
   }
 
- img {
+  img {
     max-width: 175px;
-   border-radius: 50%;
+    border-radius: 50%;
 
     @include breakpoint($large) {
-    padding: 5px;
-     border: 1px solid var(--global-border-color);
-   }
-
-   
-
+      padding: 5px;
+      border: 1px solid var(--global-border-color);
+    }
   }
 }
 
