--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,11 +14,11 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
-<!-- Avatar shape fix -->
+<!-- Avatar shape fix 160px-->
 <style>
 .author__avatar img {
-  width: 160px;
-  height: 160px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
   border-radius: 50%;
 }
