--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -17,10 +17,10 @@
 <!-- Avatar shape fix 160px-->
 <style>
 .author__avatar img {
-  width: 200px;
-  height: 200px;
+  width: 160px;
+  height: 160px;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 0;
 }
 </style>
 
