--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -68,4 +68,12 @@
 }
 </style>
 
+/* =====================================================
+   PARAGRAPH JUSTIFICATION (Word-style alignment)
+   ===================================================== */
+.page__content p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 <!-- end custom head snippets -->
