--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -65,6 +65,7 @@
 .page__content p {
   text-align: justify;
   text-justify: inter-word;
+  line-height: 1.7;
 }
    
 /* =====================================================
