--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,7 +25,7 @@
   aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: center center;
-  border-radius: 50%;
+  border-radius: ;
 }
 
 /* =====================================================
