--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -81,10 +81,10 @@ layout: default
         {% include post_pagination.html %}
       </div>
 
-      <!-- Right side: image -->
-      <div style="flex: 1; text-align: right;">
-        <img src="{{ site.baseurl }}/images/ChatGPT.png" alt="Right Side Image" style="max-width: 100%; height: auto;">
-      </div>
+   <!-- Right side: image -->
+<div style="position: absolute; top: 100px; right: 10cm;">
+  <img src="{{ site.baseurl }}/images/ChatGPT.png" alt="Right Side Image" style="max-width: 100%; height: auto;">
+</div>
 
     </div> <!-- end page__inner-wrap -->
 
