--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -80,11 +80,19 @@ layout: default
 
         {% include post_pagination.html %}
       </div>
+<div class="page__inner-wrap" style="display: flex; gap: 2em; align-items: flex-start; position: relative;">
+  
+  <!-- Left side content -->
+  <div style="flex: 2;">
+    ... your existing content ...
+  </div>
 
-   <!-- Right side: image -->
-<div style="position: absolute; top: 100px; right: 10cm;">
-  <img src="{{ site.baseurl }}/images/ChatGPT.png" alt="Right Side Image" style="max-width: 100%; height: auto;">
+  <!-- Right side image -->
+  <div style="flex: 1; margin-left: auto; padding-right: 10cm;">
+    <img src="{{ site.baseurl }}/images/SChatGPT.png" alt="Right Side Image" style="max-width: 100%; height: auto;">
+  </div>
 </div>
+
 
     </div> <!-- end page__inner-wrap -->
 
