--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -85,7 +85,7 @@ layout: default
 
       <!-- Right Column: homepage image -->
       <div style="flex: 1; min-width: 200px;">
-        <img src="{{ site.baseurl }}/images/myimage.png" style="max-width: 100%; height: auto; border-radius: 10px;">
+        <img src="{{ site.baseurl }}/images/ChatGPT.png" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
 
     </div>
