--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,13 +49,13 @@ layout: default
       {% endunless %}
 
       <!-- Page content -->
-      <section class="page__content" itemprop="text">
+      <section class="page__content" itemprop="text" style="position: relative; max-width: 900px; margin-right: 350px;">
         {{ content }}
 
         <!-- Floating right-side image ONLY on homepage -->
         {% if page.url == "/" %}
-          <div style="position: absolute; top: 150px; right: 50px; width: 300px;">
-            <img src="{{ site.baseurl }}/images/ChatGPT.png" style="width: 100%; height: auto; border-radius: 10px;">
+          <div style="position: absolute; top: 150px; right: 20px; width: 300px;">
+            <img src="/images/myimage.png" style="width: 100%; height: auto; border-radius: 10px;">
           </div>
         {% endif %}
 
