--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -55,7 +55,7 @@ layout: default
         <!-- Floating right-side image ONLY on homepage -->
         {% if page.url == "/" %}
           <div style="position: absolute; top: 150px; right: 20px; width: 300px;">
-            <img src="/images/myimage.png" style="width: 100%; height: auto; border-radius: 10px;">
+            <img src="/images/ChatGPT.png" style="width: 100%; height: auto; border-radius: 10px;">
           </div>
         {% endif %}
 
